# Game_Pacman

./: .gitignore  CMakeLists.txt  InitCloseSDL.cpp  InitCloseSDL.h  LTexture.cpp  Motion_Collision.cpp  Project_Pacman.cbp  Project_Pacman.depend  Project_Pacman.layout  README.md  creatWallandPoint.cpp  creatWallandPoint.h  externVariables.h  ghost.cpp  ghost.h  mainGame.cpp  pacman.cpp  pacman.h  renderGame.cpp  renderGame.h
